# django-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
django_manager/: __main__.py  app.css  app.py
django_manager/core/: __init__.py  config.py  operations.py  settings.py
django_manager/screens/: __init__.py  dashboard.py  docs.py  home.py  install.py  open_project.py  package_remove.py  settings.py  success.py  wizard.py
scripts/: install.bat  install.ps1
tests/: test_install_diagnostics.py
